theme: rabbit-hole: FIX regression in hidden: text color = bg color. Also FIX: toggle text silver was hard to see. Use gray instead.

--- a/src/freenet/clients/http/staticfiles/themes/rabbit-hole/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/rabbit-hole/theme.css
@@ -568,11 +568,12 @@ header, section, footer, aside, nav, article, figure {
 
 /* Different look for toggleables */
 .toggleable {
-    color: silver;
+    color: gray;
 }
 
 .toggleable .hidden {
     background-color: silver;
+    color: navy;
     padding-left: 1em;
     padding-right: 1em;
     border: gray 1px dashed;
